intel/bench_ready/Kmeans/log.txt
bench_ready/Kmeans/Kmeans.cpp:10:46: error: expected ';' at end of declaration
    int DATA_SIZE_TOTAL = DATA_SIZE * num_dim
                                             ^
                                             ;
1 error generated.
HLS FPGA Parse FAILED.
